# karplus-strong

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: README.md  architecture.md  build-and-test.md  dsp.md  future-features.md  gotchas.md  known-issues.md  parameters.md  ui.md  voice-and-synth.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
src/dsp/: AllpassFilter.h  CircularBuffer.h  DcBlocker.h  Exciter.h  KarplusStrongDsp.h  KarplusStrongVoice.h  KsCalibration.h  KsDelayLine.h  KsParams.h  OnePoleLowpass.h  SilenceDetector.h
tests/: test_dsp.cpp  test_integration.cpp
